external-prd/namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: web-public
  labels:
    name: web-public
  annotations:
    iam.amazonaws.com/permitted: ".*"
---
apiVersion: v1
kind: Namespace
metadata:
  name: monitoring
  labels:
    name: monitoring
  annotations:
    iam.amazonaws.com/permitted: ".*"
---
apiVersion: v1
kind: Namespace
metadata:
  name: kube-system
  labels:
    name: kube-system
  annotations:
    iam.amazonaws.com/permitted: ".*"
---
apiVersion: v1
kind: Namespace
metadata:
  name: maintenance
  labels:
    name: maintenance
  annotations:
    iam.amazonaws.com/permitted: ".*"
---
apiVersion: v1
kind: Namespace
metadata:
  name: flux-system
  labels:
    name: flux-system
  annotations:
    iam.amazonaws.com/permitted: ".*"
