external-prd/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: alb-ingress
  namespace: web-public
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}, {"HTTPS": 443}]'
    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:ap-northeast-1:564677439943:certificate/57deae4c-f6c3-4f3e-aaf0-185a71e7c5aa,arn:aws:acm:ap-northeast-1:564677439943:certificate/7c0f31ea-f980-4b4f-aca1-0ac9d73199f3,arn:aws:acm:ap-northeast-1:564677439943:certificate/18e68559-ba26-4d96-92ab-bc7d4a5b0235,arn:aws:acm:ap-northeast-1:564677439943:certificate/fa214b87-c30b-49a5-b6e8-aed734c30c91, arn:aws:acm:ap-northeast-1:564677439943:certificate/623c3b7f-b495-4ea1-b603-1a4d2f415a7d,arn:aws [...]
    alb.ingress.kubernetes.io/actions.ssl-redirect: '{"Type": "redirect", "RedirectConfig": { "Protocol": "HTTPS", "Port": "443", "StatusCode": "HTTP_301"}}'
    alb.ingress.kubernetes.io/security-groups: sg-008030efda8eb0e8a
    alb.ingress.kubernetes.io/subnets: subnet-70bbc92b,subnet-f45541dc,subnet-fa7f7fb3
    alb.ingress.kubernetes.io/healthcheck-interval-seconds: '30'
    alb.ingress.kubernetes.io/healthcheck-timeout-seconds: '10'
    alb.ingress.kubernetes.io/healthy-threshold-count: '3'
    alb.ingress.kubernetes.io/unhealthy-threshold-count: '3'
  labels:
    app: alb-ingress
spec:
  rules:
    - host: fascia.io
      http:
        paths:
          - path: /*
            pathType: "Prefix"
            backend:
              service:
                name: ssl-redirect
                port:
                  name: use-annotation
          - path: /*
            pathType: "Prefix"
            backend:
              service:
                name: fascia-service
                port:
                  number: 80
    - host: whalebird.social
      http:
        paths:
          - path: /*
            pathType: "Prefix"
            backend:
              service:
                name: ssl-redirect
                port:
                  name: use-annotation
          - path: /*
            pathType: "Prefix"
            backend:
              service:
                name: whalebird-service
                port:
                  number: 80
    - host: pleroma.io
      http:
        paths:
          - path: /*
            pathType: "Prefix"
            backend:
              service:
                name: ssl-redirect
                port:
                  name: use-annotation
          - path: /*
            pathType: "Prefix"
            backend:
              service:
                name: pleromaio-service
                port:
                  number: 80
    - host: seiyu.watch
      http:
        paths:
          - path: /*
            pathType: "Prefix"
            backend:
              service:
                name: ssl-redirect
                port:
                  name: use-annotation
          - path: /*
            pathType: "Prefix"
            backend:
              service:
                name: seiyuwatch-service
                port:
                  number: 80
    - host: masuda.stream
      http:
        paths:
          - path: /*
            pathType: "Prefix"
            backend:
              service:
                name: ssl-redirect
                port:
                  name: use-annotation
          - path: /*
            pathType: "Prefix"
            backend:
              service:
                name: masudastream-service
                port:
                  number: 80
    - host: k8s-monitor.h3poteto.dev
      http:
        paths:
          - path: /*
            pathType: "Prefix"
            backend:
              service:
                name: ssl-redirect
                port:
                  name: use-annotation
          - path: /*
            pathType: "Prefix"
            backend:
              service:
                name: grafana-service
                port:
                  number: 3000
    # For health check from route53
    # Route53 health check can't specify host header
    # so, it can't access host based routing ALB.
    - http:
        paths:
          - path: /pleroma/*
            pathType: "Prefix"
            backend:
              service:
                name: pleromaio-service
                port:
                  number: 80
