external-prd/ingress.yml
apiVersion: v1
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: alb-ingress
  namespace: web-public
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}, {"HTTPS": 443}]'
    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:ap-northeast-1:564677439943:certificate/57deae4c-f6c3-4f3e-aaf0-185a71e7c5aa,arn:aws:acm:ap-northeast-1:564677439943:certificate/7c0f31ea-f980-4b4f-aca1-0ac9d73199f3,arn:aws:acm:ap-northeast-1:564677439943:certificate/293a2888-ff73-4f18-b06c-273350193b5f,arn:aws:acm:ap-northeast-1:564677439943:certificate/fa214b87-c30b-49a5-b6e8-aed734c30c91, arn:aws:acm:ap-northeast-1:564677439943:certificate/623c3b7f-b495-4ea1-b603-1a4d2f415a7d,arn:aws [...]
    alb.ingress.kubernetes.io/actions.ssl-redirect: '{"Type": "redirect", "RedirectConfig": { "Protocol": "HTTPS", "Port": "443", "StatusCode": "HTTP_301"}}'
    alb.ingress.kubernetes.io/security-groups: sg-008030efda8eb0e8a
    alb.ingress.kubernetes.io/subnets: subnet-70bbc92b,subnet-f45541dc,subnet-fa7f7fb3
    alb.ingress.kubernetes.io/healthcheck-interval-seconds: '30'
    alb.ingress.kubernetes.io/healthcheck-timeout-seconds: '10'
    alb.ingress.kubernetes.io/healthy-threshold-count: '3'
    alb.ingress.kubernetes.io/unhealthy-threshold-count: '3'
  labels:
    app: alb-ingress
spec:
  rules:
    - host: fascia.io
      http:
        paths:
          - path: /*
            backend:
              serviceName: ssl-redirect
              servicePort: use-annotation
          - path: /*
            backend:
              serviceName: fascia-service
              servicePort: 80
    - host: whalebird.org
      http:
        paths:
          - path: /*
            backend:
              serviceName: ssl-redirect
              servicePort: use-annotation
          - path: /*
            backend:
              serviceName: whalebirdorg-service
              servicePort: 80
    - host: pleroma.io
      http:
        paths:
          - path: /*
            backend:
              serviceName: ssl-redirect
              servicePort: use-annotation
          - path: /*
            backend:
              serviceName: pleromaio-service
              servicePort: 80
    - host: seiyu.watch
      http:
        paths:
          - path: /*
            backend:
              serviceName: ssl-redirect
              servicePort: use-annotation
          - path: /*
            backend:
              serviceName: seiyuwatch-service
              servicePort: 80
    - host: masuda.stream
      http:
        paths:
          - path: /*
            backend:
              serviceName: ssl-redirect
              servicePort: use-annotation
          - path: /*
            backend:
              serviceName: masudastream-service
              servicePort: 80
    - host: k8s-monitor.h3poteto.dev
      http:
        paths:
          - path: /*
            backend:
              serviceName: ssl-redirect
              servicePort: use-annotation
          - path: /*
            backend:
              serviceName: grafana-service
              servicePort: 3000
